WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31016
Possible crash in RenderSlider::layout.
https://bugs.webkit.org/show_bug.cgi?id=31016
Summary
Possible crash in RenderSlider::layout.
David Levin
Reported
2009-11-02 09:18:54 PST
thumb may be 0 in RenderSlider::layout which is the reason for the if (thumb) checks. addOverflowFromChild(thumb); uses thumb and is done outside of these checks.
Attachments
Proposed fix.
(1.29 KB, patch)
2009-11-02 09:22 PST
,
David Levin
mitz: review+
levin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-11-02 09:22:33 PST
Created
attachment 42320
[details]
Proposed fix.
David Levin
Comment 2
2009-11-02 10:26:52 PST
Committed as
http://trac.webkit.org/changeset/50417
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug