Possible crash in RenderSlider::layout. https://bugs.webkit.org/show_bug.cgi?id=31016

Patch by David Levin <levin@chromium.org> on 2009-11-02
Reviewed by Dan Bernstein.

Fix out of place line of code.

Test: scrollbars/overflow-scrollbar-combinations.html
This crash only seems to repro when WebKit draws the play controls,
so the crash repros in chromium running this test but not WebKit
nightlies which use QuickTime to draw the controls.

* rendering/RenderSlider.cpp:
(WebCore::RenderSlider::layout):

git-svn-id: svn://svn.chromium.org/blink/trunk@50417 bbb929c8-8fbe-4397-9dbb-9b2b20218538