third_party/WebKit/WebCore/rendering/RenderSlider.cpp
@@ -353,9 +353,8 @@ void RenderSlider::layout()
             thumb->repaintDuringLayoutIfMoved(oldThumbRect);
 
         statePusher.pop();
+        addOverflowFromChild(thumb);
     }
-
-    addOverflowFromChild(thumb);
 
     repainter.repaintAfterLayout();    
 
